# vulkan-visualizer

./: .gitignore  CMakeLists.txt  README.md  roadmap.md
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
cmake/: setup_imgui.cmake  setup_sdl3.cmake  setup_stb.cmake  setup_vkbootstrap.cmake  setup_vma.cmake
examples/: CMakeLists.txt  basic_window.cpp  ex00_basic_window.cpp  ex01_imgui_minimal_ui.cpp  ex02_shader_hot_reload.cpp  ex03_hello_primitives.cpp  ex04_uniforms_push_constants.cpp  ex05_compute_to_image.cpp  ex06_presentation_modes_showcase.cpp  ex07_direct_to_swapchain.cpp  ex08_screenshot_workflow.cpp  ex09_3dviewport.cpp  ex10_coordinate.cpp  ex10_xpbd_cloth.cpp  ex11_stable_fluids.cpp
examples/shaders/: advect_scalar.comp  advect_scalar_3d.comp  advect_vec2.comp  advect_vec3_3d.comp  axis_box.vert  axis_color.frag  cloth.frag  cloth.vert  comp_noise.comp  divergence.comp  divergence_3d.comp  gradient.comp  gradient_3d.comp  inject.comp  inject_3d.comp  jacobi.comp  jacobi_3d.comp  pc_triangle.frag  pc_triangle.vert  render_smoke.comp  render_volume_3d.comp  simple3d.frag  simple3d.vert  sphere_impostor.frag  sphere_impostor.vert  triangle.vert
include/: vk_abi.h  vk_engine.h  vv_camera.h
src/: vk_abi.cpp  vk_engine.cpp  vv_camera.cpp
